cluster-config/infrastructure/basic/external-dns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
