cluster-config/infrastructure/basic/observability.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
